# test

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: database.py  main.py
app/exceptions/: errors.py  exception_handlers.py  http_exceptions.py
app/statistical_records/: dependencies.py  model.py  router.py  schemas.py  service.py
init-db/: init_statistical_records.sql
