[project]
name = "okkam"
version = "0.1.0"
description = ""
authors = [
    {name = "travka47",email = "travka.eal@dvfu.ru"}
]
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard] (>=0.124.4,<0.125.0)",
    "sqlalchemy (>=2.0.45,<3.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "aiomysql (>=0.3.2,<0.4.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.14.9,<0.15.0)"
]
